# hackapizza2

./: .gitignore  .gitmodules  _settings.py  config.json  configuration.json  demo_sql_logging.py  discovery_harness.py  list_open_restaurants.py  main.py  pyproject.toml
.history/: .env_20260228133907  main_20260228134229.py  main_20260228134401.py  main_20260228134414.py  main_20260228134547.py  main_20260228135209.py  main_20260228135711.py
api/: client.py  client_template.py
artifacts/: calls_demo.db
artifacts/api_discovery/: discovery_report_20260228T111329Z.json  discovery_report_20260228T112937Z.json  discovery_report_20260228T113418Z.json  discovery_report_20260228T115843Z.json  discovery_report_20260228T145419Z.json  discovery_report_20260228T183829Z.json  discovery_report_20260228T184457Z.json  discovery_report_20260228T184832Z.json  discovery_report_20260228T184941Z.json  discovery_report_20260228T185009Z.json  discovery_report_20260228T185054Z.json  discovery_report_20260228T185355Z.json  discovery_report_20260228T185516Z.json
artifacts/mcp_discovery/: discovery_20260228T120846Z.json  discovery_20260228T145434Z.json  mcp.md
core/: client.py
core/schema/: __init__.py  models.py
dashboard/: requirements.txt  server.py
dashboard/public/: app.js  index.html  style.css
data/references/: CHALLENGE_FULL.md
datapizza/agents/: __init__.py  agent.py
references/: CHALLENGE.md
scripts/: event_logger.py  start-db.sh  stop-db.sh
services/: event_logger.py
tests/: test_api_client_contracts.py  test_discovery_harness.py  test_emergency_close.py  test_sql_logging.py
tools/: api_unused.py  available_recipes.json  create_config.py  discovery_api.py  discovery_mcp.py  discovery_recipes.py  emergency_close.py  find_unused_ingredients.py  get_ingredients_frequencies.py  ingr.json  recipe_usage.py  recipes.txt
(+66 files in other folders)
