[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hp2"]

[project]
name = "hackapizza2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.3",
    "datapizza-ai",
    "datapizza-ai-clients-openai-like>=0.0.9",
    "sqlalchemy>=2.0.0",
    "pytest>=9.0.2",
    "psycopg2-binary>=2.9.11",
]

[tool.uv.sources]
datapizza-ai = { path = "./datapizza-ai", editable = true }
